 * Slightly changed the order that properties are set, for more flexibility.
 * Don't set svn:keywords on files for which svn:eol-style is not set.

 Bugs fixed:
 * Fix issue #97: Follow symlinks within CVS repository.
 * Fix issue #99: cvs2svn tries to create a file twice.
 * Fix issue #100: cvs2svn doesn't retrieve the right version.
 * Fix issue #106: SVNRepositoryMirrorParentMissingError.
 * Fix missing command-line handling of --fallback-encoding option.

 Improvements and output changes:
 * Analyze CVS revision dependency graph, giving a more robust conversion.
 * In the case of clock skew to the past, resync forwards, not backwards.
 * Treat timestamps that lie in the future as bogus, and adjust backwards.
 * Gracefully handle tags that refer to nonexistent revisions.
 * Check and fail if revision header appears multiple times.
 * Gracefully handle multiple deltatext blocks for same revision.
 * Be more careful about only processing reasonable *,v files.
 * Improve checks for illegal filenames.
 * Check if a directory name conflicts with a filename.

 Miscellaneous:
 * Add a simple (nonportable) script to log cvs2svn memory usage.


Version 1.5.1 (28 January 2007)
-------------------------------

 Bugs fixed:
 * Add missing import in cvs2svn_lib/process.py.
 * Fix omission of parsing of the --fallback-encoding option.


Version 1.5.0 (03 October 2006)
-------------------------------

 New features:
 * Support multiproject conversions (each gets its own trunk, tags, branches).
 * New --options option to allow run-time options to be defined via a file.
 * --co, --cvs, and --sort options to specify the paths to executables.
 * Add new --fallback-encoding option.

 Bugs fixed:
 * Fix issue #86: Support multiple project roots per repository.
 * Fix issue #104: Allow path to "sort" executable to be specified.
 * Fix issue #8: Allow multiple --encoding options.
 * Fix issue #109: Improve handling of fallback encodings.

 Improvements and output changes: